added maven release plugin